@@ -1,3 +1,10 @@
+Tue Jan 30 20:49:50 UTC 2007  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+         * tools/Config_Handlers/Package_Handlers/CPD_Handler.cpp
+         * tools/Config_Handlers/Package_Handlers/CAD_Handler.cpp:
+         
+           Compile fixes for FC6.
+ 
 Tue Jan 30 20:43:14 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * DAnCE/DomainApplicationManager/Deployment_Configuration.cpp:
